# rl-car-td3

./: README.md  car_td3_actor_test.pt  car_td3_critic_1_test.pt  car_td3_critic_2_test.pt  game.py  pyproject.toml  td3.py  track_points.json  track_points2.json  track_points3.json
